--- a/trialresults.html
+++ b/trialresults.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -121,24 +121,16 @@
 
   .learner-card {
     box-shadow: none;
-    margin-top: 10px;
-  }
-
-  h2 {
-    margin-top: 0;
-    margin-bottom: 6px;
-  }
-
-  h3 {
-    margin-bottom: 8px;
   }
 
   /* Prevent ugly splits INSIDE learner */
   .trend-box,
   table,
   thead,
+  tr,
   h4,
-  h5 {
+  h5,
+  canvas {
     page-break-inside: avoid;
     break-inside: avoid;
   }
@@ -154,31 +146,9 @@
     break-before: page;
   }
 
-  /* Allow first learner to start immediately after title */
-  #report > .learner-card:first-of-type {
-    page-break-before: auto !important;
-    break-before: auto !important;
+  canvas {
+    max-height: 240px;
   }
-}
-
-/* Chart sizing – screen & print */
-.trend-box {
-  height: 180px;
-  margin-top: 10px;
-}
-
-.trend-box canvas {
-  width: 100% !important;
-  height: 100% !important;
-}
-
-  @media print {
-
-  .learner-card {
-    margin: 0 0 12px 0;   /* bottom spacing only */
-    padding: 14px;
-  }
-
 }
 
 </style>
@@ -411,10 +381,9 @@ function renderGrouped(grouped) {
     const recommendations = generateRecommendations(subjects, trend, supportFlag);
 
     return `
-    
+      ${index === 0 ? "" : `<div class="page-break"></div>`}
 
-    <div class="learner-card ${index > 0 ? "page-break" : ""}">
-
+      <div class="learner-card">
 
         <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;">
           <h4>👤 ${student} <small>(<strong>Adm: ${admission}</strong>)</small></h4>
@@ -939,8 +908,8 @@ window.downloadPDF = function () {
 
   const element = reportDiv;
 
- const opt = {
-  margin: [8, 10, 8, 10],   // top, right, bottom, left
+  const opt = {
+  margin: 10,
   filename,
   image: { type: "jpeg", quality: 0.98 },
   html2canvas: { scale: 2, useCORS: true },
