--- a/trialresults.html
+++ b/trialresults.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+still gap is there, <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -106,7 +106,9 @@
     margin-bottom: 6px;
   }
 
+
 @media print {
+
   body {
     background: #fff;
   }
@@ -119,37 +121,48 @@
     display: none !important;
   }
 
+  
+
+  /* first learner does NOT break */
+  #report > .learner-page:first-child {
+    page-break-before: auto;
+    break-before: auto;
+  }
+
+  /* card styling */
   .learner-card {
+    margin: 0;
+    padding: 14px;
     box-shadow: none;
   }
 
-  /* Prevent ugly splits INSIDE learner */
-  .trend-box,
+  /* keep internals together */
   table,
   thead,
-  tr,
   h4,
   h5,
-  canvas {
-    page-break-inside: avoid;
+  .trend-box {
     break-inside: avoid;
+    page-break-inside: avoid;
   }
 
-  /* Repeat table headers correctly */
   thead {
     display: table-header-group;
   }
-
-  /* Force NEW learner on new page */
-  .page-break {
-    page-break-before: always;
-    break-before: page;
-  }
-
-  canvas {
-    max-height: 240px;
-  }
 }
+
+
+
+ .trend-box {
+  height: 180px;
+  margin-top: 12px;
+}
+
+.trend-box canvas {
+  width: 100% !important;
+  height: 100% !important;
+}
+
 
 </style>
 
@@ -265,8 +278,7 @@ const { data: termAverages } = await supabase
     .from("term_subject_report_view")
     .select("first_name,last_name,subject_name,average_score,achievement_level")
     .eq("term", termName)
-    .eq("academic_year", SYSTEM_YEAR);
-
+  
 
 trendMap = {};
 
@@ -381,9 +393,9 @@ function renderGrouped(grouped) {
     const recommendations = generateRecommendations(subjects, trend, supportFlag);
 
     return `
-      ${index === 0 ? "" : `<div class="page-break"></div>`}
+  <div class="learner-page ${index > 0 ? "page-break" : ""}">
+    <div class="learner-card">
 
-      <div class="learner-card">
 
         <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;">
           <h4>👤 ${student} <small>(<strong>Adm: ${admission}</strong>)</small></h4>
@@ -908,8 +920,10 @@ window.downloadPDF = function () {
 
   const element = reportDiv;
 
-  const opt = {
-  margin: 10,
+ const opt = {
+margin: [4, 8, 6, 8],
+
+   // top, right, bottom, left
   filename,
   image: { type: "jpeg", quality: 0.98 },
   html2canvas: { scale: 2, useCORS: true },
