--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+still gap is there, <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -106,7 +106,9 @@
     margin-bottom: 6px;
   }
 
+
 @media print {
+
   body {
     background: #fff;
   }
@@ -119,52 +121,41 @@
     display: none !important;
   }
 
+  
+
+  /* first learner does NOT break */
+  #report > .learner-page:first-child {
+    page-break-before: auto;
+    break-before: auto;
+  }
+
+  /* card styling */
   .learner-card {
+    margin: 0;
+    padding: 14px;
     box-shadow: none;
-    margin-top: 10px;
   }
 
-  h2 {
-    margin-top: 0;
-    margin-bottom: 6px;
-  }
-
-  h3 {
-    margin-bottom: 8px;
-  }
-
-  /* Prevent ugly splits INSIDE learner */
-  .trend-box,
+  /* keep internals together */
   table,
   thead,
   h4,
-  h5 {
-    page-break-inside: avoid;
+  h5,
+  .trend-box {
     break-inside: avoid;
+    page-break-inside: avoid;
   }
 
-  /* Repeat table headers correctly */
   thead {
     display: table-header-group;
   }
-
-  /* Force NEW learner on new page */
-  .page-break {
-    page-break-before: always;
-    break-before: page;
-  }
-
-  /* Allow first learner to start immediately after title */
-  #report > .learner-card:first-of-type {
-    page-break-before: auto !important;
-    break-before: auto !important;
-  }
 }
 
-/* Chart sizing – screen & print */
-.trend-box {
+
+
+ .trend-box {
   height: 180px;
-  margin-top: 10px;
+  margin-top: 12px;
 }
 
 .trend-box canvas {
@@ -172,14 +163,6 @@
   height: 100% !important;
 }
 
-  @media print {
-
-  .learner-card {
-    margin: 0 0 12px 0;   /* bottom spacing only */
-    padding: 14px;
-  }
-
-}
 
 </style>
 
@@ -295,8 +278,7 @@ const { data: termAverages } = await supabase
     .from("term_subject_report_view")
     .select("first_name,last_name,subject_name,average_score,achievement_level")
     .eq("term", termName)
-    .eq("academic_year", SYSTEM_YEAR);
-
+  
 
 trendMap = {};
 
@@ -411,9 +393,8 @@ function renderGrouped(grouped) {
     const recommendations = generateRecommendations(subjects, trend, supportFlag);
 
     return `
-    
-
-    <div class="learner-card ${index > 0 ? "page-break" : ""}">
+  <div class="learner-page ${index > 0 ? "page-break" : ""}">
+    <div class="learner-card">
 
 
         <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;">
@@ -940,7 +921,9 @@ window.downloadPDF = function () {
   const element = reportDiv;
 
  const opt = {
-  margin: [8, 10, 8, 10],   // top, right, bottom, left
+margin: [4, 8, 6, 8],
+
+   // top, right, bottom, left
   filename,
   image: { type: "jpeg", quality: 0.98 },
   html2canvas: { scale: 2, useCORS: true },
