--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -6,112 +6,115 @@ still gap is there, <!DOCTYPE html>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+
+
 <style>
-  body {
-    font-family: "Segoe UI", Arial, sans-serif;
-    background: #f7f9fb;
-    color: #222;
-    line-height: 1.5;
-  }
+/* ================== BASE ================== */
+body {
+  font-family: "Segoe UI", Arial, sans-serif;
+  background: #f7f9fb;
+  color: #222;
+  line-height: 1.5;
+}
 
-  h2, h3 {
-    margin-bottom: 6px;
-  }
+h2, h3 {
+  margin-bottom: 6px;
+}
 
-  h4 {
-    margin: 0;
-  }
+h4 {
+  margin: 0;
+}
 
+h5 {
+  margin-top: 18px;
+  margin-bottom: 4px;
+}
 
+/* ================== LAYOUT ================== */
 .learner-card {
   background: #ffffff;
   padding: 14px;
   margin: 0;
 }
 
-  
-  .learner-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #eee;
-    padding-bottom: 8px;
-    margin-bottom: 10px;
-  }
+.learner-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 8px;
+  margin-bottom: 10px;
+}
 
-  .learner-meta {
-    font-size: 0.95em;
-    color: #555;
-  }
+.learner-meta {
+  font-size: 0.95em;
+  color: #555;
+}
 
-  .summary-box {
-    background: #f3f6fa;
-    border-left: 5px solid #3498db;
-    padding: 10px 14px;
-    margin: 12px 0;
-    border-radius: 4px;
-  }
+.summary-box {
+  background: #f3f6fa;
+  border-left: 5px solid #3498db;
+  padding: 10px 14px;
+  margin: 12px 0;
+  border-radius: 4px;
+}
 
-  .pill {
-    display: inline-block;
-    padding: 4px 10px;
-    border-radius: 14px;
-    font-size: 0.85em;
-    background: #eee;
-    margin-right: 6px;
-  }
+.pill {
+  display: inline-block;
+  padding: 4px 10px;
+  border-radius: 14px;
+  font-size: 0.85em;
+  background: #eee;
+  margin-right: 6px;
+}
 
-  .actions-box {
-    margin-top: 10px;
-    padding: 10px;
-    border-radius: 4px;
-    background: #fafafa;
-  }
+.actions-box {
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 4px;
+  background: #fafafa;
+}
 
-  h5 {
-    margin-top: 18px;
-    margin-bottom: 4px;
-  }
+/* ================== TABLES ================== */
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-top: 6px;
+  font-size: 0.85em;
+}
 
-  table {
-    border-collapse: collapse;
-    width: 100%;
-    margin-top: 6px;
-    font-size: 0.85em;
-  }
-
- th, td {
+th, td {
   padding: 5px 6px;
   border-bottom: 1px solid #ddd;
 }
 
+th {
+  background: #f0f0f0;
+  text-align: left;
+}
 
-  th {
-    background: #f0f0f0;
-    text-align: left;
-  }
+tr:last-child td {
+  border-bottom: none;
+}
 
-  tr:last-child td {
-    border-bottom: none;
-  }
+.subject-block {
+  margin-top: 14px;
+  padding-top: 10px;
+  border-top: 1px dashed #ccc;
+}
 
-  .subject-block {
-    margin-top: 14px;
-    padding-top: 10px;
-    border-top: 1px dashed #ccc;
-  }
+.evidence-note {
+  font-size: 0.85em;
+  margin-bottom: 6px;
+}
 
-  .evidence-note {
-    font-size: 0.85em;
-    margin-bottom: 6px;
-  }
-
+/* ================== PAGE SETUP ================== */
 @page {
   size: A4;
   margin: 15mm 12mm 15mm 12mm;
 }
 
-  
+/* ================== PRINT ================== */
 @media print {
 
   body {
@@ -126,67 +129,55 @@ still gap is there, <!DOCTYPE html>
     display: none !important;
   }
 
- 
+  /* each learner starts on a new page */
+  .learner-page {
+    page-break-before: always;
+    break-before: page;
+  }
 
-
-  /* first learner does NOT break */
+  /* except the first */
   #report > .learner-page:first-child {
     page-break-before: auto;
     break-before: auto;
   }
 
-  /* card styling */
   .learner-card {
     margin: 0;
     padding: 14px;
     box-shadow: none;
   }
 
+  /* keep small logical blocks together */
+  h4,
+  h5,
+  thead {
+    break-inside: avoid;
+    page-break-inside: avoid;
+  }
 
-h4,
-h5,
-thead {
-  break-inside: avoid;
-  page-break-inside: avoid;
-}
+  /* allow tables to flow */
+  table {
+    page-break-inside: auto;
+  }
 
-table {
-  page-break-inside: auto;
-}
+  tr {
+    break-inside: avoid;
+    page-break-inside: avoid;
+  }
 
-tr {
-  break-inside: avoid;
-  page-break-inside: avoid;
-}
-
-.trend-box {
-  break-inside: avoid;
-  page-break-inside: avoid;
-}
-
-
-  
   thead {
     display: table-header-group;
   }
-}
 
-
-@media print {
-
-  .learner-page {
-    page-break-before: always;
-    break-before: page;
-  }
-
-  /* Allow first learner to start normally */
-  .learner-page:first-child {
-    page-break-before: auto;
-    break-before: auto;
+  /* charts never split */
+  .trend-box {
+    break-inside: avoid;
+    page-break-inside: avoid;
   }
 }
-  
- .trend-box {
+
+/* ================== CHART ================== */
+.trend-box {
   height: 180px;
   margin-top: 12px;
 }
@@ -195,9 +186,9 @@ tr {
   width: 100% !important;
   height: 100% !important;
 }
-
-
 </style>
+
+  
 
 </head>
 <body>
