--- a/reports.html
+++ b/reports.html
@@ -1,3 +1,4 @@
+
  <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -1089,6 +1090,7 @@ function downloadSummaryPDF() {
   });
 }
 
+window.downloadSummaryPDF = downloadSummaryPDF;
 
 
 </script>
