--- a/reports.html
+++ b/reports.html
@@ -142,12 +142,15 @@ tr:last-child td {
   overflow: visible;
 }
 
-
-  #pdfContainer {
-  opacity: 0.01; /* NOT zero */
-  pointer-events: none;
+#pdfContainer {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+  width: 210mm;
+  background: white;
 }
 
+ 
 </style>
 
   
