Refactor PDF generation and update styles

--- a/reports.html
+++ b/reports.html
@@ -143,11 +143,13 @@ tr:last-child td {
 }
 
 #pdfContainer {
-  position: absolute;
-  top: -9999px;
-  left: -9999px;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 210mm;
   background: white;
+  z-index: -1;          /* hidden behind page */
+  pointer-events: none;
 }
 
  
@@ -1059,59 +1061,53 @@ function getTrend(currentAvg, previousAvg) {
 }
 
 
-
-
 document.getElementById("downloadSummaryPDFBtn")
   .addEventListener("click", async () => {
 
-  if (!termSelect.value) {
-    alert("Select a term first");
-    return;
-  }
+    if (!termSelect.value) {
+      alert("Select a term first");
+      return;
+    }
 
-  const container = document.getElementById("pdfContainer");
+    const container = document.getElementById("pdfContainer");
 
-  // 1️⃣ Render HTML
-  container.innerHTML = window.renderSummaryReport(records);
+    /* 1️⃣ Render HTML */
+    container.innerHTML = window.renderSummaryReport(records);
 
-  // 2️⃣ Allow DOM to paint
-  await new Promise(r => requestAnimationFrame(r));
-  await new Promise(r => requestAnimationFrame(r));
+    /* 2️⃣ Let DOM fully paint */
+    await new Promise(r => requestAnimationFrame(r));
+    await new Promise(r => requestAnimationFrame(r));
 
-  // 3️⃣ Render sparklines (Chart.js)
-  await window.renderSparklines();
+    /* 3️⃣ Render sparklines (Chart.js) */
+    await window.renderSparklines();
 
-  // 4️⃣ Give Chart.js time to finish drawing
-  await new Promise(r => setTimeout(r, 300));
+    /* 4️⃣ Force layout + canvas paint */
+    container.style.display = "block";
+    container.getBoundingClientRect();
 
-  // 5️⃣ Generate PDF
-  await html2pdf()
-    .set({
+    await new Promise(r => requestAnimationFrame(r));
+    await new Promise(r => requestAnimationFrame(r));
+
+    /* 5️⃣ Generate PDF (SINGLE call — IMPORTANT) */
+    await html2pdf(container, {
       margin: 10,
       filename: `Summary_${termSelect.options[termSelect.selectedIndex].text}_${SYSTEM_YEAR}.pdf`,
       image: { type: "jpeg", quality: 0.98 },
       html2canvas: {
         scale: 2,
-        useCORS: true,
-        backgroundColor: "#ffffff"
+        backgroundColor: "#ffffff",
+        windowWidth: container.scrollWidth,
+        windowHeight: container.scrollHeight
       },
       jsPDF: {
         unit: "mm",
         format: "a4",
         orientation: "portrait"
       },
-      pagebreak: {
-        mode: ["css", "legacy"]
-      }
-    })
-    .from(container)
-    .save();
+      pagebreak: { mode: ["css"] }
+    });
 
-  // 6️⃣ Cleanup
-  await new Promise(r => setTimeout(r, 200));
-container.innerHTML = "";
-});
-
+  });
 
 
 
